<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitulo"
        android:textAlignment="center"
        android:textSize="30sp" />


    <EditText

        android:id="@+id/etDocumento"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/etDocumento"
        android:inputType="number" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/etUsuario"
            android:inputType="textPersonName" />


        <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/etNombres"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/etApellidos"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/etContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/etContra"
        android:inputType="textPassword"
        android:minHeight="48dp" />


        <EditText
            android:id="@+id/etBuscar"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/etBuscar"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="registerUser"
                android:text="@string/btnRegistrar" />

            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="callUserList"
                android:text="@string/btnActualizar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="searchUser"
                android:text="@string/btnBuscar" />

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clearAllUsers"
                android:text="@string/btnLimpiar" />

        </LinearLayout>

        <ListView
        android:id="@+id/lvLista"
        android:layout_width="match_parent"
        android:layout_height="156dp">


    </ListView>

<LinearLayout
android:id="@+id/linearUserList"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:layout_marginTop="10dp">
</LinearLayout>

    </LinearLayout>

    </ScrollView>

